--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Hakkımda</h2>
 
     <p>Merhaba Ben Burak Teoman Acarer! Bodrum'da yaşıyorum. Hobilerimden bahsedicek olursak müzik dinlemeyi seviyorum ve aktiviteler yaparken genellikle dinlerim. Fitness ile ilgileniyorum.
-       Web geliştirme ile ilgileniyorum. Kodluyoruz'un bu eğitim serisi sayesinde harika şeyler öğrendim ve öğrenmeye devam ediyorum! Yazılım'a dair bir ilginiz var ise kesinlikle kodluyoruz'u tavsiye ediyorum!
+       Web geliştirme ile ilgileniyorum. Kodluyoruz'un bu eğitim serisi sayesinde harika şeyler öğrendim ve öğrenmeye devam ediyorum! Yazılım'a dair bir ilginiz var ise kesinlikle kodluyoruz'u tavsiye ediyorum.
     </p>
 
     <h1>Sevdiğim Müzik Türleri</h1>
