ilgi alanları diye baslik eklendi ve liste oluşturuldu. h2 basligi eklendi ve görsel eklendi.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- Ödev Başlangıç -->
+
     <h1>Burak Teoman Acarer</h1>
 
     <h2>Hakkımda</h2>
@@ -15,9 +16,35 @@
        Web geliştirme ile ilgileniyorum. Kodluyoruz'un bu eğitim serisi sayesinde harika şeyler öğrendim ve öğrenmeye devam ediyorum! Yazılım'a dair bir ilginiz var ise kesinlikle kodluyoruz'u tavsiye ediyorum.
     </p>
 
+    <h2>İlgi Alanlarım</h2>
+
+        <ol>
+            <li>Film</li>
+            <ul>
+                <li>The Big Lebowski</li>
+                <li>The Blues Brothers</li>
+                <li>Neredesin Firuze</li>
+            </ul>
+            <li>Dizi</li>
+            <ul>
+                <li>Star Trek</li>
+                <li>Battlestar Galactica</li>
+                <li>The IT Crowd</li>
+            </ul>
+            <li>Kitap</li>
+            <ul>
+                <li>Yerdeniz</li>
+                <li>Dune</li>
+                <li>Androidler Elektrikli Koyun Düşler mi?</li>
+            </ul>
+        </ol>
+
     <h1>Sevdiğim Müzik Türleri</h1>
 
+    <img src="music.jpg" alt="müzik-türleri" title="müzik" height="350px">
+
     <p>Aslında her tür müziği severim. Kod yazarken veya bir araştırma yaparken genelde arka tarafta chill türü playlist dinlerim. Fitness tarzı aktiviteler yaparken fitness playlisti adlı playlistleri dinlerim.</p>
+
     <!-- Ödev Bitiş -->
 </body>
 </html>
