lisdedeki film kitap dizilere link verildi.

--- a/index.html
+++ b/index.html
@@ -21,25 +21,27 @@
         <ol>
             <li>Film</li>
             <ul>
-                <li>The Big Lebowski</li>
+                <li><a href="https://www.imdb.com/title/tt0118715/">The Big Lebowski</a></li>
                 <li>The Blues Brothers</li>
                 <li>Neredesin Firuze</li>
             </ul>
             <li>Dizi</li>
             <ul>
                 <li>Star Trek</li>
-                <li>Battlestar Galactica</li>
+                <li><a href="https://www.imdb.com/title/tt0407362/">Battlestar Galactica</a></li>
                 <li>The IT Crowd</li>
             </ul>
             <li>Kitap</li>
             <ul>
                 <li>Yerdeniz</li>
                 <li>Dune</li>
-                <li>Androidler Elektrikli Koyun Düşler mi?</li>
+                <li><a href="https://www.goodreads.com/book/show/20638501-androidler-elektrikli-koyun-d-ler-mi?ac=1&from_search=true&qid=uHDGEwrmB9&rank=1">Androidler Elektrikli Koyun Düşler mi?</a></li>
             </ul>
         </ol>
 
     <h1>Sevdiğim Müzik Türleri</h1>
+
+    <h2>Müzik Türleri</h2>
 
     <img src="music.jpg" alt="müzik-türleri" title="müzik" height="350px">
 
