15 ve 16 satirdaki kelimelere inline element eklendi

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Hakkımda</h2>
 
     <p>Merhaba Ben Burak Teoman Acarer! Bodrum'da yaşıyorum. Hobilerimden bahsedicek olursak müzik dinlemeyi seviyorum ve aktiviteler yaparken genellikle dinlerim. Fitness ile ilgileniyorum.
-       Web geliştirme ile ilgileniyorum. Kodluyoruz'un bu eğitim serisi sayesinde harika şeyler öğrendim ve öğrenmeye devam ediyorum! Yazılım'a dair bir ilginiz var ise kesinlikle kodluyoruz'u tavsiye ediyorum.
+      <b> Web geliştirme</b> ile ilgileniyorum. <u> Kodluyoruz'un</u> bu eğitim serisi sayesinde harika şeyler öğrendim ve öğrenmeye devam ediyorum! <strong> Yazılım'a dair bir ilginiz var ise kesinlikle kodluyoruz'u tavsiye ediyorum.</strong>
     </p>
 
     <h2>İlgi Alanlarım</h2>
